# ctrlesc

./: README.md  pyproject.toml
src/ctrlesc/: __main__.py  main.py
