[project]
name = "ctrlesc"
version = "0.1"
authors = [
    { name="mmjakub", email="62809364+mmjakub@users.noreply.github.com" },
]
description = "Turn Ctrl into Esc/Ctrl"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "evdev",
]

[project.urls]
Homepage = "https://github.com/mmjakub/ctrlesc"
Issues = "https://github.com/mmjakub/ctrlesc/issues"

[project.scripts]
ctrlesc = "ctrlesc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
